--- a/wp-content/themes/airbnb-theme/package.json
+++ b/wp-content/themes/airbnb-theme/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@wordpress/scripts": "^19.2.2",
     "dir-archiver": "^1.1.1",
+    "gulp": "^5.0.0",
     "node-sass": "^7.0.1",
     "rtlcss": "^3.5.0"
   },
