added experiences javascript enqueue scripts

--- a/wp-content/themes/airbnb-theme/package.json
+++ b/wp-content/themes/airbnb-theme/package.json
@@ -20,8 +20,12 @@
     "@wordpress/scripts": "^19.2.2",
     "dir-archiver": "^1.1.1",
     "gulp": "^5.0.0",
+    "gulp-clean-css": "^4.3.0",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^6.0.1",
     "node-sass": "^7.0.1",
-    "rtlcss": "^3.5.0"
+    "rtlcss": "^3.5.0",
+    "sass": "^1.87.0"
   },
   "rtlcssConfig": {
     "options": {
